# skeleton-says

./: .gitremotes  CONTRIBUTING.rst  Pipfile  README.rst  hello.py  setup.cfg  setup.py  skeleton_says.py  test_skeleton_says.py
.github/pages/: index.html
.github/workflows/: code.yml  docs.yml
1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.0/.doctrees/: environment.pickle  index.doctree  tutorials.doctree
1.0/.doctrees/explanations/: why-a-skeleton.doctree
1.0/.doctrees/reference/: contributing.doctree
1.0/_modules/: index.html
1.0/_modules/skeleton_says/: say.html
1.0/_sources/explanations/: why-a-skeleton.rst.txt
1.0/explanations/: why-a-skeleton.html
1.0/how-to/: embed.html
1.0/reference/: api.html  contributing.html
1.0/tutorials/: installation.html
docs/: conf.py  explanations.rst  how-to.rst  reference.rst
docs/explanations/: why-is-something-so.rst
docs/how-to/: accomplish-a-task.rst
docs/reference/: api.rst
docs/tutorials/: installation.rst
master/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
master/.doctrees/: environment.pickle  explanations.doctree  how-to.doctree  reference.doctree
master/.doctrees/how-to/: embed.doctree
master/.doctrees/reference/: api.doctree  contributing.doctree
master/.doctrees/tutorials/: installation.doctree
master/_modules/: index.html
master/_modules/skeleton_says/: say.html
master/_sources/how-to/: embed.rst.txt
master/_sources/reference/: api.rst.txt
master/_sources/tutorials/: installation.rst.txt
master/_static/: documentation_options.js
master/explanations/: why-a-skeleton.html
master/how-to/: embed.html
master/reference/: api.html  contributing.html
master/tutorials/: installation.html
src/skeleton_says/: __main__.py  hello.py  say.py
tests/: test_cli.py  test_skeleton_says.py
