[metadata]
name = skeleton-says
description = Commandline application with a talking skeleton
url = https://github.com/thomascobb/skeleton-says
author = Skeleton
author_email = skeleton@example.com
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    jinja2

[options.extras_require]
# For development tests/docs
dev =
    pytest

[options.packages.find]
where = src

[options.package_data]
skeleton_says =
    *.jinja2

[options.entry_points]
# Include a command line script
console_scripts =
    skeleton-says = skeleton_says.__main__:main
