[metadata]
name = skeleton-says
description = Commandline application with a talking skeleton
url = https://github.com/thomascobb/skeleton-says
author = Skeleton
author_email = skeleton@example.com
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    jinja2

[options.extras_require]
# For development tests/docs
dev =
    black==21.9b0
    isort>5.0
    flake8-isort
    pytest
    pytest-cov

[options.packages.find]
where = src

[options.package_data]
skeleton_says =
    *.jinja2

[options.entry_points]
# Include a command line script
console_scripts =
    skeleton-says = skeleton_says.__main__:main

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373

[tool:pytest]
addopts =
    --tb=native -vv
    --cov=skeleton_says --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/
